deployments/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomize-02
spec:
  type: ClusterIP
  selector:
    app: kustomize-02
  ports:
    - name: http
      port: 80
      targetPort: http-port
      protocol: TCP
